--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@strapi/plugin-i18n": "4.1.7",
     "@strapi/plugin-users-permissions": "4.1.7",
     "@strapi/strapi": "4.1.7",
-    "pg": "8.6.0"
+    "pg": "8.6.0",
+    "strapi-plugin-entity-relationship-chart": "^4.1.0"
   },
   "author": {
     "name": "A Strapi developer"
