--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@strapi/plugin-i18n": "4.1.7",
     "@strapi/plugin-users-permissions": "4.1.7",
     "@strapi/strapi": "4.1.7",
+    "jsdom": "^19.0.0",
     "pg": "8.6.0",
     "strapi-plugin-entity-relationship-chart": "^4.1.0"
   },
