--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@strapi/strapi": "4.1.7",
     "jsdom": "^19.0.0",
     "pg": "8.6.0",
+    "slugify": "^1.6.5",
     "strapi-plugin-entity-relationship-chart": "^4.1.0"
   },
   "author": {
